--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ blockquote p { font-size: 14px; }
     <div>Hua Wei Scholarship (for graduate student) <span class="pull-right">2019.9</span></div>
     <div>National first prize in national mathematics contest of the National University
       <span class="pull-right">2018.9</span></div>
-    <div>The National Scholarship for graduate students <span class="pull-right">2015.9</span></div>
+    <div>The National Scholarship for undergraduate students <span class="pull-right">2015.9</span></div>
     <!-- <div>2010 ACM/ICPC Asia Regional Contest Hangzhou Onsite, Silver Medal <span class="pull-right">2010.10</span></div> -->
 
   </div>
